gccida/g1/ix86_va_start
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2989:5: error: expected ';' after expression
tree v22; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2989:6: error: use of undeclared identifier 'v22'
tree v22; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2990:5: error: expected ';' after expression
tree v23; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2990:6: error: use of undeclared identifier 'v23'
tree v23; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2991:5: error: expected ';' after expression
tree v24; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2991:6: error: use of undeclared identifier 'v24'
tree v24; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2992:5: error: expected ';' after expression
tree v25; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2992:6: error: use of undeclared identifier 'v25'
tree v25; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2993:5: error: expected ';' after expression
tree fpr; // [rsp+8h] [rbp-40h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2993:6: error: use of undeclared identifier 'fpr'; did you mean 'for'?
tree fpr; // [rsp+8h] [rbp-40h] 
     ^~~
     for
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:2993:9: error: expected '(' after 'for'
tree fpr; // [rsp+8h] [rbp-40h] 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3002:35: error: expected ')'
v8 = build( COMPONENT_REF, ( tree)v3[1], v7, v3); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3002:11: note: to match this '('
v8 = build( COMPONENT_REF, ( tree)v3[1], v7, v3); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3003:1: error: use of undeclared identifier 'fpr'
fpr = build( COMPONENT_REF, ( tree)v4[1], v7, v4); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3003:36: error: expected ')'
fpr = build( COMPONENT_REF, ( tree)v4[1], v7, v4); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3003:12: note: to match this '('
fpr = build( COMPONENT_REF, ( tree)v4[1], v7, v4); 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3004:35: error: expected ')'
v9 = build( COMPONENT_REF, ( tree)v5[1], v7, v5); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3004:11: note: to match this '('
v9 = build( COMPONENT_REF, ( tree)v5[1], v7, v5); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3005:38: error: expected expression
v10 = build( COMPONENT_REF, *( tree *)( v6 + 8), v7, v6); 
                                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3019:27: error: use of undeclared identifier 'fpr'; did you mean 'for'?
v20 = build( MODIFY_EXPR, fpr->common.type, fpr, v19); 
                          ^~~
                          for
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3019:27: error: expected expression
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/i386.c:3019:45: error: use of undeclared identifier 'fpr'; did you mean 'for'?
v20 = build( MODIFY_EXPR, fpr->common.type, fpr, v19); 
                                            ^~~
                                            for
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_va_start/src/obj/i386.o] Error 1
